# ptydaemonizer

./: CMakeLists.txt  LICENSE  README.md  arguments.c  arguments.h  ptydaemonizer.c  ptydaemonizer.h
cmake/modules/: FindSyslog.cmake  FindSystemD.cmake
